crates/apollo-compiler/test_data/diagnostics/0079_directive_is_unique.txt
Error: non-repeatable directive unique can only be used once per location
    ╭─[0079_directive_is_unique.graphql:11:18]
    │
 11 │   fieldB @unique @unique
    │          ───┬─── ───┬───  
    │             ╰───────────── directive `@unique` first called here
    │                     │     
    │                     ╰───── directive `@unique` called again here
────╯

